fix button not display on mobile screen size

--- a/client/src/pages/hotel/hotel.css
+++ b/client/src/pages/hotel/hotel.css
@@ -209,6 +209,6 @@
 	}
 
 	.bookNow {
-		display: none;
+		/* display: none; */
 	}
 }
